# corner-maze-rl

./: .gitignore  LICENSE  README.md  pyproject.toml
colab/: 01_explore_env.ipynb
data/yoked/dataset/: actions_exposure.parquet  actions_real_pretrial.parquet  actions_synthetic_pretrial.parquet  sessions.parquet  subjects.parquet
md/: dt-repo-plan.md  environment-architecture.md  maze-behavior-spec.md  overnight-build-recap.md  reward-structure-analysis.md  sr-yoked-negative-results.md  technical-dashboard-ux-prompt.md  training-speedup-smoke-04-09.md  yoked-data-from-legacy-data.md  yoking-pipeline-fixes-2026-05-10.md
notebooks/: 01_explore_env.ipynb  02_explore_yoked_data.ipynb  04_train_dt.ipynb  05_train_linearattn_dt.ipynb  06_train_dt_decouple.ipynb  07_train_linearattn_decouple.ipynb  08_fullctx_linearattn.ipynb  09_hybrid_fullctx_linearattn_shortvanilladt.ipynb
scripts/: add_actions_to_reward.py  build_yoked_from_legacy_data.py  setup_data.sh  train_dt.py
src/corner_maze_rl/: __init__.py
src/corner_maze_rl/data/: canonical.py  compute_returns.py  load.py  session_types.py  windows.py
src/corner_maze_rl/encoders/: base.py  grid_cells.py  state_vectors.py
tests/: test_build_yoked_from_legacy_data.py  test_canonical.py  test_compute_returns.py  test_decision_transformer.py  test_decision_transformer_decoupled_dimension.py  test_env_step_regression.py  test_grid_cells.py  test_kill_switch.py  test_ppo_sr.py  test_rollout.py  test_run_io.py  test_session_types.py  test_train_dt.py  test_windows.py  test_yoked_dataset_invariants.py
(+28 files in other folders)
